[package]
name = "blog"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = "0.8.8"
chrono = "0.4.42"
clap = { version = "4.5.54", features = ["derive"] }
lazy_static = "1.5.0"
pulldown-cmark = "0.13.0"
serde = { version = "1.0.228", features = ["derive"] }
syntect = "5.3.0"
tera = "1.20.1"
tokio = { version = "1.49.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["cors"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"

[build-dependencies]
reqwest = { version = "0.13.1", features = ["blocking"] }
tokio = "1.49.0"
